--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
+              <div class="benefits-icon">
+                <svg width="64" hight="64">
+                  <use href="./images/icons/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="sub-title">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
@@ -73,6 +78,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-icon">
+                <svg width="64" hight="64">
+                  <use href="./images/icons/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="sub-title">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
@@ -80,6 +90,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-icon">
+                <svg width="64" hight="64">
+                  <use href="./images/icons/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="sub-title">Diligence</h3>
               <p class="text">
                 Research and confirm brands with the strongest digital growth
@@ -87,6 +102,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-icon">
+                <svg width="64" hight="64">
+                  <use href="./images/icons/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="sub-title">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -112,6 +132,28 @@
               <div class="team-card">
                 <h3 class="team-sub-title">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+                <ul class="team-social-icon-list">
+                  <li class="team-social-icon">
+                    <svg width="16" hight="16">
+                      <use href="./images/icons/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social-icon">
+                    <svg width="16" hight="16">
+                      <use href="./images/icons/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social-icon">
+                    <svg width="16" hight="16">
+                      <use href="./images/icons/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social-icon">
+                    <svg width="16" hight="16">
+                      <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -124,6 +166,28 @@
               <div class="team-card">
                 <h3 class="team-sub-title">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
+                <ul class="team-social-icon-list">
+                  <li class="team-social-icon">
+                    <svg width="16" hight="16">
+                      <use href="./images/icons/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social-icon">
+                    <svg width="16" hight="16">
+                      <use href="./images/icons/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social-icon">
+                    <svg width="16" hight="16">
+                      <use href="./images/icons/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social-icon">
+                    <svg width="16" hight="16">
+                      <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -136,6 +200,28 @@
               <div class="team-card">
                 <h3 class="team-sub-title">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
+                <ul class="team-social-icon-list">
+                  <li class="team-social-icon">
+                    <svg width="16" hight="16">
+                      <use href="./images/icons/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social-icon">
+                    <svg width="16" hight="16">
+                      <use href="./images/icons/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social-icon">
+                    <svg width="16" hight="16">
+                      <use href="./images/icons/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social-icon">
+                    <svg width="16" hight="16">
+                      <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -148,6 +234,28 @@
               <div class="team-card">
                 <h3 class="team-sub-title">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
+                <ul class="team-social-icon-list">
+                  <li class="team-social-icon">
+                    <svg width="16" hight="16">
+                      <use href="./images/icons/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social-icon">
+                    <svg width="16" hight="16">
+                      <use href="./images/icons/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social-icon">
+                    <svg width="16" hight="16">
+                      <use href="./images/icons/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social-icon">
+                    <svg width="16" hight="16">
+                      <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -172,12 +280,22 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio/img-2-2.jpg"
-                alt="Cashless Payment Example"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-overlay">
+                <img
+                  src="./images/portfolio/img-2-2.jpg"
+                  alt="Cashless Payment Example"
+                  width="360"
+                  height="300"
+                />
+
+                <div class="portfolio-card-content">
+                  <p class="portfolio-content-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-card">
                 <h3 class="sub-title">Cashless Payment</h3>
                 <p class="text">Marketing</p>
@@ -238,14 +356,41 @@
     </main>
     <!-- ============ FOOTER SECTION ============-->
     <footer class="footer-section">
-      <div class="container">
-        <a href="./index.html" class="logo-footer"
-          >Web<span class="logo-span-footer">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-flex">
+          <a href="./index.html" class="logo-footer"
+            >Web<span class="logo-span-footer">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-social-media">
+          <p class="footer-text">Social media</p>
+          <ul class="footer-social-list">
+            <li class="footer-social-link">
+              <svg width="24" hight="24">
+                <use href="./images/icons/icons.svg#icon-instagram"></use>
+              </svg>
+            </li>
+            <li class="footer-social-link">
+              <svg width="24" hight="24">
+                <use href="./images/icons/icons.svg#icon-twitter"></use>
+              </svg>
+            </li>
+            <li class="footer-social-link">
+              <svg width="24" hight="24">
+                <use href="./images/icons/icons.svg#icon-facebook"></use>
+              </svg>
+            </li>
+            <li class="footer-social-link">
+              <svg width="24" hight="24">
+                <use href="./images/icons/icons.svg#icon-linkedin"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
     <!-- ============ /FOOTER SECTION ============-->
