modify css and html files

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
           <ul class="benefits-list">
             <li class="benefits-item">
               <div class="benefits-icon">
-                <svg width="64" hight="64">
-                  <use href="./images/icons/icons.svg#icon-antenna"></use>
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="sub-title">Strategy</h3>
@@ -79,8 +79,8 @@
             </li>
             <li class="benefits-item">
               <div class="benefits-icon">
-                <svg width="64" hight="64">
-                  <use href="./images/icons/icons.svg#icon-clock"></use>
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="sub-title">Punctuality</h3>
@@ -91,8 +91,8 @@
             </li>
             <li class="benefits-item">
               <div class="benefits-icon">
-                <svg width="64" hight="64">
-                  <use href="./images/icons/icons.svg#icon-diagram"></use>
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="sub-title">Diligence</h3>
@@ -103,8 +103,8 @@
             </li>
             <li class="benefits-item">
               <div class="benefits-icon">
-                <svg width="64" hight="64">
-                  <use href="./images/icons/icons.svg#icon-astronaut"></use>
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="sub-title">Technologies</h3>
@@ -134,24 +134,32 @@
                 <p class="team-text">Product Designer</p>
                 <ul class="team-social-icon-list">
                   <li class="team-social-icon">
-                    <svg width="16" hight="16">
-                      <use href="./images/icons/icons.svg#icon-instagram"></use>
-                    </svg>
+                    <a class="team-social-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-social-icon">
-                    <svg width="16" hight="16">
-                      <use href="./images/icons/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a class="team-social-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-social-icon">
-                    <svg width="16" hight="16">
-                      <use href="./images/icons/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a class="team-social-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-social-icon">
-                    <svg width="16" hight="16">
-                      <use href="./images/icons/icons.svg#icon-linkedin"></use>
-                    </svg>
+                    <a class="team-social-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -168,24 +176,32 @@
                 <p class="team-text">Frontend Developer</p>
                 <ul class="team-social-icon-list">
                   <li class="team-social-icon">
-                    <svg width="16" hight="16">
-                      <use href="./images/icons/icons.svg#icon-instagram"></use>
-                    </svg>
+                    <a class="team-social-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-social-icon">
-                    <svg width="16" hight="16">
-                      <use href="./images/icons/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a class="team-social-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-social-icon">
-                    <svg width="16" hight="16">
-                      <use href="./images/icons/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a class="team-social-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-social-icon">
-                    <svg width="16" hight="16">
-                      <use href="./images/icons/icons.svg#icon-linkedin"></use>
-                    </svg>
+                    <a class="team-social-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -202,24 +218,32 @@
                 <p class="team-text">Marketing</p>
                 <ul class="team-social-icon-list">
                   <li class="team-social-icon">
-                    <svg width="16" hight="16">
-                      <use href="./images/icons/icons.svg#icon-instagram"></use>
-                    </svg>
+                    <a class="team-social-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-social-icon">
-                    <svg width="16" hight="16">
-                      <use href="./images/icons/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a class="team-social-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-social-icon">
-                    <svg width="16" hight="16">
-                      <use href="./images/icons/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a class="team-social-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-social-icon">
-                    <svg width="16" hight="16">
-                      <use href="./images/icons/icons.svg#icon-linkedin"></use>
-                    </svg>
+                    <a class="team-social-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -236,24 +260,32 @@
                 <p class="team-text">UI Designer</p>
                 <ul class="team-social-icon-list">
                   <li class="team-social-icon">
-                    <svg width="16" hight="16">
-                      <use href="./images/icons/icons.svg#icon-instagram"></use>
-                    </svg>
+                    <a class="team-social-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-social-icon">
-                    <svg width="16" hight="16">
-                      <use href="./images/icons/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a class="team-social-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-social-icon">
-                    <svg width="16" hight="16">
-                      <use href="./images/icons/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a class="team-social-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-social-icon">
-                    <svg width="16" hight="16">
-                      <use href="./images/icons/icons.svg#icon-linkedin"></use>
-                    </svg>
+                    <a class="team-social-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -268,12 +300,21 @@
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio/img-1-2.jpg"
-                alt="Banking App Example"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-overlay">
+                <img
+                  src="./images/portfolio/img-1-2.jpg"
+                  alt="Banking App Example"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-card-content">
+                  <p class="portfolio-content-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-card">
                 <h3 class="sub-title">Banking App</h3>
                 <p class="text">App</p>
@@ -287,7 +328,6 @@
                   width="360"
                   height="300"
                 />
-
                 <div class="portfolio-card-content">
                   <p class="portfolio-content-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
@@ -302,48 +342,84 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio/img-3-2.jpg"
-                alt="Meditation App Example"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-overlay">
+                <img
+                  src="./images/portfolio/img-3-2.jpg"
+                  alt="Meditation App Example"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-card-content">
+                  <p class="portfolio-content-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-card">
                 <h3 class="sub-title">Meditation App</h3>
                 <p class="text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio/img-4-2.jpg"
-                alt="Taxi Service Example"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-overlay">
+                <img
+                  src="./images/portfolio/img-4-2.jpg"
+                  alt="Taxi Service Example"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-card-content">
+                  <p class="portfolio-content-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-card">
                 <h3 class="sub-title">Taxi Service</h3>
                 <p class="text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio/img-5-2.jpg"
-                alt="Screen Illustrations Example"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-overlay">
+                <img
+                  src="./images/portfolio/img-5-2.jpg"
+                  alt="Screen Illustrations Example"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-card-content">
+                  <p class="portfolio-content-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-card">
                 <h3 class="sub-title">Screen Illustrations</h3>
                 <p class="text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio/img-6-2.jpg"
-                alt="Online Courses Example"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-overlay">
+                <img
+                  src="./images/portfolio/img-6-2.jpg"
+                  alt="Online Courses Example"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-card-content">
+                  <p class="portfolio-content-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-card">
                 <h3 class="sub-title">Online Courses</h3>
                 <p class="text">Marketing</p>
@@ -367,27 +443,35 @@
           </p>
         </div>
         <div class="footer-social-media">
-          <p class="footer-text">Social media</p>
+          <p class="footer-social-text">Social media</p>
           <ul class="footer-social-list">
-            <li class="footer-social-link">
-              <svg width="24" hight="24">
-                <use href="./images/icons/icons.svg#icon-instagram"></use>
-              </svg>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-social-link">
-              <svg width="24" hight="24">
-                <use href="./images/icons/icons.svg#icon-twitter"></use>
-              </svg>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-social-link">
-              <svg width="24" hight="24">
-                <use href="./images/icons/icons.svg#icon-facebook"></use>
-              </svg>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-social-link">
-              <svg width="24" hight="24">
-                <use href="./images/icons/icons.svg#icon-linkedin"></use>
-              </svg>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
