--- a/index.html
+++ b/index.html
@@ -135,28 +135,28 @@
                 <ul class="team-social-icon-list">
                   <li class="team-social-icon">
                     <a class="team-social-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="team-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-icon">
                     <a class="team-social-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="team-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-icon">
                     <a class="team-social-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="team-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-icon">
                     <a class="team-social-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="team-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -177,28 +177,28 @@
                 <ul class="team-social-icon-list">
                   <li class="team-social-icon">
                     <a class="team-social-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="team-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-icon">
                     <a class="team-social-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="team-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-icon">
                     <a class="team-social-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="team-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-icon">
                     <a class="team-social-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="team-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -219,28 +219,28 @@
                 <ul class="team-social-icon-list">
                   <li class="team-social-icon">
                     <a class="team-social-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="team-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-icon">
                     <a class="team-social-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="team-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-icon">
                     <a class="team-social-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="team-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-icon">
                     <a class="team-social-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="team-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -261,28 +261,28 @@
                 <ul class="team-social-icon-list">
                   <li class="team-social-icon">
                     <a class="team-social-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="team-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-icon">
                     <a class="team-social-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="team-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-icon">
                     <a class="team-social-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="team-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-icon">
                     <a class="team-social-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="team-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -447,28 +447,28 @@
           <ul class="footer-social-list">
             <li class="footer-social-item">
               <a href="" class="footer-social-link">
-                <svg width="24" height="24">
+                <svg class="footer-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
               <a href="" class="footer-social-link">
-                <svg width="24" height="24">
+                <svg class="footer-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
               <a href="" class="footer-social-link">
-                <svg width="24" height="24">
+                <svg class="footer-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
               <a href="" class="footer-social-link">
-                <svg width="24" height="24">
+                <svg class="footer-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
