--- a/index.html
+++ b/index.html
@@ -307,13 +307,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="portfolio-card-content">
-                  <p class="portfolio-content-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-content-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-card">
                 <h3 class="sub-title">Banking App</h3>
@@ -328,13 +326,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="portfolio-card-content">
-                  <p class="portfolio-content-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-content-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-card">
                 <h3 class="sub-title">Cashless Payment</h3>
@@ -349,13 +345,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="portfolio-card-content">
-                  <p class="portfolio-content-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-content-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-card">
                 <h3 class="sub-title">Meditation App</h3>
@@ -370,13 +364,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="portfolio-card-content">
-                  <p class="portfolio-content-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-content-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-card">
                 <h3 class="sub-title">Taxi Service</h3>
@@ -391,13 +383,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="portfolio-card-content">
-                  <p class="portfolio-content-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-content-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-card">
                 <h3 class="sub-title">Screen Illustrations</h3>
@@ -412,13 +402,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="portfolio-card-content">
-                  <p class="portfolio-content-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-content-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-card">
                 <h3 class="sub-title">Online Courses</h3>
